--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite --open --host",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest src"
   },
   "dependencies": {
     "vue": "^3.1.4",
@@ -16,10 +17,14 @@
     "@iconify/iconify": "^2.0.3",
     "@iconify/json": "^1.1.373",
     "@intlify/vite-plugin-vue-i18n": "^2.3.1",
+    "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
     "@vitejs/plugin-vue": "^1.2.4",
     "@vue/compiler-sfc": "^3.1.4",
+    "@vue/test-utils": "^2.0.0-rc.10",
     "@vueuse/core": "^5.1.3",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.5",
     "vite": "^2.4.1",
     "vite-plugin-components": "^0.12.2",
@@ -27,6 +32,7 @@
     "vite-plugin-purge-icons": "^0.7.0",
     "vite-plugin-windicss": "^1.2.4",
     "vite-svg-loader": "^2.1.0",
+    "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^0.2.0",
     "windicss": "^3.1.4"
   }
