--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-    "singleQuote": true,
-    "semi": true,
-    "trailingComma": "all",
-    "arrowParens": "avoid"
+  "singleQuote": true,
+  "semi": true,
+  "trailingComma": "all",
+  "arrowParens": "avoid",
+  "printWidth": 120
 }
