--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest src"
   },
   "dependencies": {
+    "prettier": "^2.3.2",
     "vue": "^3.1.4",
     "vue-i18n": "^9.1.6",
     "vue-router": "^4.0.8"
